samples/_failures_safe/1761530791_d44397_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_43188f57.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_43188f57.c:192:12: error: missing terminating " character
  192 |     printf("Dijkstra distances from vertex %d:\
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_43188f57.c:192:5: error: expected expression at end of input
  192 |     printf("Dijkstra distances from vertex %d:\
      |     ^~~~~~
./samples/SAFE/__tmp_43188f57.c:192:5: error: expected declaration or statement at end of input
